# CrushPilot_Terra

./: .gitignore  1.0.0 参考项目技术文档.md  CrushPilot 1.0.0 开发规划.md  CrushPilot PRD 1.0.0.md  当前分支改动总结.md
backend/: .env.example  Dockerfile  README.md  langgraph.json  pyproject.toml  requirements.txt
backend/.langgraph_api/: .langgraph_ops.pckl
backend/app/: knowledge_base.py  main.py  research.py  thread_store.py
backend/app/skills/: __init__.py  goutoujunshi.py
backend/app/skills/goutoujunshi_source/: LICENSE  UPSTREAM.md
backend/app/skills/goutoujunshi_source/documentation/: architecture.md  permissions.md
backend/app/skills/goutoujunshi_source/tests/: social-calibration-scenarios.md
backend/src/app/: __init__.py  main.py
backend/src/app/agents/: __init__.py
backend/src/app/agents/assistant/: __init__.py  edges.py  graph.py  nodes.py  prompts.py  schemas.py  state.py  tools.py
backend/src/app/api/: __init__.py  dependencies.py  exception_handlers.py
backend/src/app/api/v1/: router.py
backend/src/app/core/: __init__.py  config.py  lifespan.py  logging.py
backend/src/app/infrastructure/: __init__.py  checkpointer.py  database.py  model_factory.py
backend/src/app/schemas/: __init__.py  chat.py
backend/src/app/services/: __init__.py  chat_service.py  research_service.py
backend/tests/: conftest.py  test_main.py  test_research.py
backend/tests/integration/api/: test_chat.py
backend/tests/unit/agents/: test_nodes.py  test_tools.py
backend/tests/unit/services/: test_chat_service.py  test_model_factory.py  test_research_service.py
(+81 files in other folders)
