[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "crushpilot-backend"
version = "1.0.0"
description = "FastAPI and LangGraph backend for CrushPilot"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi==0.139.2",
    "httpx>=0.28",
    "langgraph==1.2.9",
    "langgraph-checkpoint-postgres==3.1.0",
    "langgraph-checkpoint-sqlite==3.1.0",
    "psycopg[binary,pool]>=3.3",
    "sentence-transformers>=3.0,<4",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
crushpilot-knowledge = "app.agents.assistant.tools:knowledge_cli"
crushpilot-research = "app.services.research_service:main"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["src/app/agents/assistant/resources"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I", "UP"]
